# news-processing

collector/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  FINAL_REPORT.md  README.md  SOURCES.md  dedup.sqlite  docker-compose.yml
collector/collector/: models.py  settings.py
collector/scripts/: measure.py
collector/tests/: conftest.py  test_fetcher.py
deploy/: README.md  docker-compose.yml
news_processor/collector/: Dockerfile  REPORT.md  dedup.sqlite-shm  dedup.sqlite-wal  main.py  pyproject.toml
news_processor/collector/collector/: app.py  dedup.py  fetcher.py  kafka.py  publishers.py
news_processor/collector/tests/: test_dedup.py  test_models.py  test_publishers.py
news_processor/resolver/: REPORT.md
news_processor/resolver/resolver/: llm.py  models.py
news_processor/resolver/tests/: test_audio.py  test_llm.py
resolver/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
resolver/resolver/: app.py  audio.py  geocoder.py  kafka.py  settings.py
resolver/tests/: conftest.py  test_geocoder.py  test_models.py
