[project]
name = "resolver"
version = "0.1.0"
description = "Consume Vietnamese news articles from Kafka, extract traffic events with Ollama, geocode with Nominatim, publish to Kafka."
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.5",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
]

[project.scripts]
resolver = "resolver.app:run"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resolver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
